# sora-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  sora_api.py  sora_bootstrap.py  sora_constants.py  sora_logging.py  sora_mcp.py
.github/workflows/: docs.yml
acp_adapter/: entry.py
docs/: .gitignore  README.md  bridge-elements.md  env-vars.md  index.md  package-lock.json  package.json  release-readiness.md  troubleshooting.md
docs/.vitepress/: config.mts
docs/guide/: architecture.md  configuration.md  index.md  installation.md  plugins.md  profiles.md  quick-start.md  skins.md  sora-bridge-status.md
docs/guide/mcp/: auto-discovery.md  servers.md  websocket.md
docs/guide/voice/: elevenlabs.md  gemini-live.md  openai-realtime.md  providers.md  retell.md  ultravox.md  vapi.md  visualizer-research.md  xai-grok.md
docs/reference/: cli.md
docs/reference/cli/: chat.md  config.md  doctor.md  mcp.md  plugins.md  setup.md  sora.md  tui.md  voice.md
docs/reference/config/: env.md  profiles.md  yaml.md
docs/reference/plugins/: sora-hermes.md  sora-voip.md
docs/voip/: ari.md  asterisk.md  commands.md  dograh.md  index.md  recording.md  setup.md  sip.md  troubleshooting.md
optional-mcps/github/: manifest.yaml
optional-mcps/linear/: manifest.yaml
plugins/: __init__.py
plugins/sora_hermes/: __init__.py  plugin.yaml
plugins/sora_voip/: __init__.py  ari_client.py  bridge.py  cli.py  config.example.yaml  dograh_client.py  plugin.yaml  rtp_handler.py  sora-voip.service  voip.env.example
sora_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sora_cli/: __init__.py  batch_runner.py  benchmark.py  cli.py  cli_output.py  colors.py  config.py  config_cmd.py  cron.py  curses_ui.py  doctor.py  elevenlabs_client.py  handlers.py  logs.py  main.py  mcp.py  model_tools.py  openai_realtime_client.py  plugins.py  providers.py  retell_client.py  run_agent.py  secret_prompt.py  setup.py  skills.py  skin_engine.py  sora_state.py  status.py  toolsets.py  ultravox_client.py  uninstall.py  update.py  utils.py  voice.py  voip.py  xai_client.py
tests/: test_new_providers.py  test_visualizer_webui.py  test_voice_cli.py
ui-tui/: package-lock.json  package.json  tsconfig.json
ui-tui/src/: App.tsx  cli.tsx
website/: __init__.py  index.html  package-lock.json  package.json  playwright.config.ts  start-server.mjs  tailwind.config.js  test-server.mjs  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
website/public/: config.template.js
website/public/worklets/: gemini-audio-worklet.js
website/scripts/: demo.sh  dev.sh  reset-dev-mode.sh
website/scripts/ngrok/: configure-urls.sh  detect-ngrok.sh  install-instructions.sh  ngrok.yml.template  start-tunnels.sh  validate-cors.sh  wait-for-tunnels.sh
website/server/: config.mjs  index.js  sora-config.mjs  test.mjs
website/server/routes/: retell.js  xai.js
website/server/routes/routes/: gemini.js  openai.js
website/server/utils/: observability.js  translationSafety.js
website/server/utils/utils/: security.js
website/src/: App.jsx  App.tsx  index.css  main.tsx  styles.css
website/src/components/: Dashboard.tsx  ErrorDisplay.tsx  InstallGuide.jsx  MCPanel.tsx  ParticleSystem.tsx  ProviderPanel.tsx  ProviderToggle.jsx  SettingsPanel.tsx  StatusBar.tsx  StatusPanel.jsx  VoiceDemo.jsx  VoiceDemo.part1.jsx  VoicePanel.tsx
website/src/contexts/: GeminiVoiceContext.tsx  OpenAIVoiceContext.tsx  ProviderContext.tsx
website/src/hooks/: useActiveProviderMessages.ts  useOpenAITranslationSessionTimer.ts  useOpenAITranslationSource.ts  useReconnection.ts  useRetellVoice.ts  useVapiVoice.ts
website/src/lib/: apiConfig.ts  configPlaceholders.ts  errorTracking.ts  openaiTranslation.ts  settingsStorage.ts  utils.ts
website/src/pages/: Index.tsx
website/src/styles/: index.css
website/src/test/: GeminiProvider.test.tsx  Index.test.tsx  OpenAITranslationProvider.test.tsx  ProviderContext.test.tsx  ProviderTabs.test.tsx  UltravoxProvider.test.tsx  UltravoxVoiceContext.test.tsx  VapiProvider.test.tsx  externalSubtitleOverlayDocs.test.ts  geminiRoute.test.ts  openaiTranslationTestUtils.ts  rawAudioBridgeDocs.test.ts  retellRoute.test.ts  serverSecurity.test.ts  setup.ts  translationEvaluationFixtures.test.ts  useOpenAITranslation.test.tsx  useReconnection.test.ts  useVapiVoice.test.tsx  voiceConfig.test.ts
website/src/types/: audio-worklet.d.ts  gemini.ts  index.ts  openai-translation.ts  retell.ts  ultravox.ts
(+27 files in other folders)
