# PEP 639 SPDX license expression
[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "sora-agent"
version = "0.1.0"
description = "S0RA Agent — Hermes companion CLI/plugins for Gemini Live, Vapi, ElevenLabs, MCP, and VOIP voice bridges."
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{name = "Capslockb"}]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "openai==2.24.0",
    "python-dotenv==1.2.2",
    "fire==0.7.1",
    "httpx[socks]==0.28.1",
    "rich==14.3.3",
    "tenacity==9.1.4",
    "pyyaml==6.0.3",
    "ruamel.yaml==0.18.17",
    "requests==2.33.0",
    "jinja2==3.1.6",
    "pydantic==2.13.4",
    "prompt_toolkit==3.0.52",
    "croniter==6.0.0",
    "packaging==26.0",
    "Markdown==3.10.2",
    "PyJWT[crypto]==2.13.0",
    "urllib3>=2.7.0,<3",
    "tzdata==2025.3; sys_platform == 'win32'",
    "psutil==7.2.2",
    "pathspec==1.1.1",
    "fastapi>=0.104.0,<1",
    "uvicorn[standard]>=0.24.0,<1",
    "ptyprocess>=0.7.0,<1; sys_platform != 'win32'",
    "pywinpty>=2.0.0,<3; sys_platform == 'win32'",
    "Pillow==12.2.0",
    "numpy==2.4.3",
    "websockets==13.1",
    "discord.py[voice]==2.7.1",
    "aiohttp>=3.9.0,<4",
]

[project.optional-dependencies]
# Voice bridges
gemini-live = [
    "google-generativeai>=0.8.0,<1",
    "google-ai-generativelanguage==0.6.15",
]
vapi = [
    "vapi-ai==0.1.0",
]
# Web search backends
exa = ["exa-py==2.10.2"]
firecrawl = ["firecrawl-py==4.17.0"]
parallel-web = ["parallel-web==0.4.2"]
# Image generation
fal = ["fal-client==0.13.1"]
# TTS backends
edge-tts = ["edge-tts==7.2.7"]
elevenlabs = ["elevenlabs==1.59.0"]
minimax-tts = ["minimax-tts==0.1.0"]
mistral-tts = ["mistralai==2.4.8"]
gemini-tts = ["google-generativeai>=0.8.0,<1"]
# STT
faster-whisper = [
    "faster-whisper==1.2.1",
    "sounddevice==0.5.5",
]
# Messaging platforms
telegram = ["python-telegram-bot[webhooks]==22.6"]
discord = ["discord.py[voice]==2.7.1", "aiohttp==3.13.4", "brotlicffi==1.2.0.1"]
slack = ["slack-bolt==1.27.0", "slack-sdk==3.40.1", "aiohttp==3.13.4"]
matrix = ["mautrix[encryption]==0.21.0", "aiosqlite==0.22.1", "asyncpg==0.31.0", "aiohttp-socks==0.11.0"]
# Memory
honcho = ["honcho-ai==2.0.1"]
# MCP
mcp = ["mcp==1.26.0", "starlette==1.0.1"]
# Web dashboard
web = ["fastapi==0.133.1", "uvicorn[standard]==0.41.0", "starlette==1.0.1"]
# CLI enhancements
cli = ["simple-term-menu==1.6.6"]
# Voice audio
voice = [
    "faster-whisper==1.2.1",
    "sounddevice==0.5.5",
    "numpy==2.4.3",
]
# Dev
dev = [
    "debugpy==1.8.20",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-timeout==2.4.0",
    "mcp==1.26.0",
    "starlette==1.0.1",
    "ty==0.0.21",
    "ruff==0.15.10",
    "setuptools>=77.0,<83",
]

[project.scripts]
sora = "sora_cli.main:main"
sora-acp = "acp_adapter.entry:main"
sora-voip = "plugins.sora_voip.cli:main"
sora-api = "sora_api:main"

[tool.setuptools]
py-modules = [
    "sora_bootstrap",
    "sora_constants",
    "sora_logging",
]

[tool.setuptools.data-files]
locales = ["locales/*.yaml"]

[tool.setuptools.package-data]
sora_cli = []
"ui_tui" = ["src/**/*", "package.json", "tsconfig.json", "dist/**/*"]
plugins = [
    "**/plugin.yaml",
    "**/plugin.yml",
    "**/README.md",
]
"sora_voip" = ["*.py", "*.yaml", "*.yml", "*.service", "*.example", "config.example.yaml", "voip.env.example"]
optional_mcps = ["**/manifest.yaml"]

[tool.setuptools.packages.find]
include = [
    "agent", "agent.*",
    "tools", "tools.*",
    "sora_cli", "sora_cli.*",
    "gateway", "gateway.*",
    "tui_gateway", "tui_gateway.*",
    "cron",
    "acp_adapter",
    "plugins", "plugins.*",
    "providers", "providers.*",
    "ui_tui", "ui_tui.*",
    "website", "website.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (API keys, Modal, etc.)",
    "real_concurrent_gate: opt out of the autouse stub that disables _detect_concurrent_sora_instances",
]
addopts = "-m 'not integration' --timeout=30 --timeout-method=thread"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unknown-argument = "warn"
redundant-cast = "ignore"

[tool.ruff]
preview = true

[tool.ruff.lint]
select = ["PLW1514"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLW1514"]
"skills/**" = ["PLW1514"]
"optional-skills/**" = ["PLW1514"]
"plugins/**" = ["PLW1514"]